--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "node-sass": "^4.13.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -16,8 +17,11 @@
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "babel-eslint": "^10.1.0",
+    "css-loader": "^3.5.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.4",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
