--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "js-md5": "^0.7.3",
     "node-sass": "^4.13.1",
+    "view-design": "^4.2.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
