--- a/vue-mobile/package.json
+++ b/vue-mobile/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vant": "^2.10.6",
-    "vue": "^3.0.0-0"
+    "vue": "^3.0.0-0",
+    "vue-loader": "^15.9.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
